--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@strapi/plugin-cloud": "5.13.0",
     "@strapi/plugin-users-permissions": "5.13.0",
     "@strapi/strapi": "5.13.0",
+    "@teachablemachine/image": "^0.8.5",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "better-sqlite3": "11.3.0",
+    "canvas": "^3.1.0",
     "jimp": "^1.6.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.15.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
