Switch upload provider to cloudinary

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ DATABASE_PASSWORD=IrtBaHqPzCFtKSULuWqn9hq37KKjL4QX
 DATABASE_SSL=true
 APP_KEYS=721584f3ecd6272d32cd44167fac7686JWT_SECRET=v7t2iwff20do8V/S5QL8bw==
 JWT_SECRET=S5LlffLzjsjgeZRygBDtPQ==
+CLOUDINARY_NAME=do5ngfqkd 
+CLOUDINARY_KEY=552635595319822 
+CLOUDINARY_SECRET=T_LyGJYfLXI11OQV3C_QmXxRjJU 
