--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.13.0",
-    "@strapi/plugin-users-permissions": "5.13.0",
-    "@strapi/provider-upload-cloudinary": "^5.21.0",
-    "@strapi/strapi": "5.13.0",
+    "@strapi/plugin-users-permissions": "^5.22.0",
+    "@strapi/provider-upload-cloudinary": "^5.22.0",
+    "@strapi/strapi": "^5.22.0",
     "@teachablemachine/image": "^0.8.5",
     "@tensorflow/tfjs-node": "^4.22.0",
     "better-sqlite3": "11.3.0",
